add @ferrarimarco’s dotfiles
via https://github.com/github/super-linter/commit/aca43d0, performed on
@GitHub’s Super-Linter, but which mentioned shellcheck, itself a tool that
makes numerous appearances even in Zsh files:
https://github.com/ferrarimarco/dotfiles/search?q=shellcheck+zsh

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "BrianUstas"]
 	path = BrianUstas
 	url = git@github.com:ustasb/dotfiles.git
+[submodule "MarcoFerrari"]
+	path = MarcoFerrari
+	url = git@github.com:ferrarimarco/dotfiles.git
