add @exergonic’s dotfiles
https://github.com/exergonic/dotfiles/blob/c0fbd7b1efa30fa17001637f948a7cfe83bebec9/shell/aliases#L35

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "MarcoFerrari"]
 	path = MarcoFerrari
 	url = git@github.com:ferrarimarco/dotfiles.git
+[submodule "BillyWayneMcCann"]
+	path = BillyWayneMcCann
+	url = git@github.com:exergonic/dotfiles.git
