--- a/.typo-ci.yml
+++ b/.typo-ci.yml
@@ -37,19 +37,24 @@ excluded_words:
   - Crashlytics
   - csharp  # CodeQL Analysis
   - cyberciti  # cyberciti.biz
+  - dabutvin  # dabutvin/Imgbot
   - esolang
   - ffs
   - guillaumealgis  # guillaumealgis/XcodeWarningsAsXcconfig
   - ibiqlik  # ibiqlik/action-yamllint
+  - Imgbot  # dabutvin/Imgbot
   - imgbotconfig  # dabutvin/Imgbot
   - jonreid  # jonreid/XcodeWarnings
+  - jsonlint
   - ksh  # Korn shell
+  - lucaslarson
   - LucasLarson
   - Mackup
+  - markdownlint
+  - minuti\u00e6  # performatively pedantic minutiae
   - minutiæ  # performatively pedantic minutiae
   - nixCraft  # Vivek Gite, cyberciti.biz
   - noninfringement  # GNU General Public License
-  - omz  # ohmyzsh
   - peter-evans  # peter-evans/create-pull-request
   - rustup
   - sobolevn  # sobolevn/misspell-fixer-action
@@ -57,15 +62,16 @@ excluded_words:
   - typoci
   - uncommenting
   - VivekGite  # nixCraft, cyberciti.biz
+  - yamllint
 
   # AsciiDoc
   - adoc
   - toclevels
 
   # CSS
-  - webtv
-  - konqueror
   - freebsd
+  - konqueror
+  - webtv
 
   # Clang, GCC
   - argc
@@ -86,6 +92,7 @@ excluded_words:
   - fgnat
   - fgnu
   - fident
+  - fixit  # fdiagnostics-fixit-info
   - fno
   - fshow
   - fstandalone
@@ -99,6 +106,7 @@ excluded_words:
   - latomic
   - llu
   - lstdc
+  - parseable  # fdiagnostics-parseable-fixits
   - pch
   - pthread
   - slo
@@ -135,15 +143,24 @@ excluded_words:
   - textconv
 
   # GitHub
+  - Ater  # TalAter/open-source-templates
+  - autofix  # kdeldycke/meta-package-manager
+  - dependabot
   - gitsubmodule
   - gomod
-  - Liberapay
+  - issuehunt
+  - liberapay
+  - nuget  # Dependabot
   - ossar
-  - Otechie
+  - otechie
+  - patreon
   - sarif  # OSSAR
+  - shfmt
+  - tidelift
 
   # Gitpod
   - bastet  # gitpod-io/gitpod
+  - gitpod
   - runtimes
   - tetris
 
@@ -193,7 +210,7 @@ excluded_words:
 
   # Windows
   # https://github.com/toptal/gitignore/blob/78659/templates/Windows.gitignore
-  - ekstop  # [Dd]esktop.ini
+  - esktop  # [Dd]esktop.ini
   - lnk
   - msix
   - msm
@@ -222,7 +239,9 @@ excluded_words:
   - xcworkspacedata
 
   # Zsh
-  - MichaelAquilina  # https://gitignore.io/api/zsh
+  - Aquilina  # https://gitignore.io/api/zsh
+  - ohmyzsh
+  - omz  # ohmyzsh
   - robbyrussell  # https://gitignore.io/api/zsh
   - venv
   - zcalc
@@ -232,6 +251,7 @@ excluded_words:
   - zsdoc
   - zsh
   - zshelldoc
+  - zshenv
   - Zunit
   - zwc
 
