add @gggritso’s dotfiles
the user through whom I found
`git reset --quiet HEAD --` as a viable
`git unstage`

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "MarcelBischoff"]
 	path = MarcelBischoff
 	url = git@github.com:herrbischoff/dotpr0n.git
+[submodule "GeorgeGritsouk"]
+	path = GeorgeGritsouk
+	url = git@github.com:gggritso/dotfiles.git
