--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "GeorgeGritsouk"]
 	path = GeorgeGritsouk
 	url = git@github.com:gggritso/dotfiles.git
+[submodule "TimButters"]
+	path = TimButters
+	url = git@github.com:TimButters/dotfiles.git
