add @wincent’s dotfiles
for `setopts`
https://github.com/wincent/wincent/blob/5f1ea417a6e904ef21a679944a624cbc0d1530a7/aspects/dotfiles/files/.zshrc#L65-L73

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "TimButters"]
 	path = TimButters
 	url = git@github.com:TimButters/dotfiles.git
+[submodule "GregHurrell"]
+	path = GregHurrell
+	url = git@github.com:wincent/wincent.git
