add @durdn’s dotfiles
for `.gitconfig` aliases https://github.com/durdn/cfg/blob/0d07c47ced58330e20565c7a45018c61114dfc4c/.gitconfig
via https://web.archive.org/web/0id_/blogs.atlassian.com/2014/10/advanced-git-aliases/#content

--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "GregHurrell"]
 	path = GregHurrell
 	url = git@github.com:wincent/wincent.git
+[submodule "NicolaPaolucci"]
+	path = NicolaPaolucci
+	url = git@github.com:durdn/cfg.git
