move @ddevault’s dotfiles from `git` to `https` for browser accessibility

--- a/.gitmodules
+++ b/.gitmodules
@@ -33,4 +33,4 @@
 	url = git@github.com:durdn/cfg.git
 [submodule "DrewDeVault"]
 	path = DrewDeVault
-	url = git@git.sr.ht:~sircmpwn/dotfiles
+	url = https://git.sr.ht/~sircmpwn/dotfiles
