--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "NicolaPaolucci"]
 	path = NicolaPaolucci
 	url = git@github.com:durdn/cfg.git
+[submodule "DrewDeVault"]
+	path = DrewDeVault
+	url = https://git.sr.ht/~sircmpwn/dotfiles
