add @PaulIrish’s dotfiles
for `.dircolors` https://github.com/paulirish/dotfiles/blob/ccccd0726a8607133fc81115413a934e88e6d0a8/.dircolors

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "NicolaPaolucci"]
 	path = durdn
 	url = git@github.com:durdn/cfg.git
+[submodule "PaulIrish"]
+	path = PaulIrish
+	url = git@github.com:paulirish/dotfiles.git
