add @DriesVints’s dotfiles
https://github.com/driesvints/dotfiles/blob/388baf13d1b3856c4920ee62bfed1f10339498ec/path.zsh#L17

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "NicolaPaolucci"]
 	path = durdn
 	url = git@github.com:durdn/cfg.git
+[submodule "DriesVints"]
+	path = DriesVints
+	url = git@github.com:driesvints/dotfiles.git
