add xero’s dotfiles
https://github.com/xero/dotfiles/blob/c8fa7984099a71378839d8796553b73f41113e90/bin/bin/gitio

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "NicolaPaolucci"]
 	path = durdn
 	url = git@github.com:durdn/cfg.git
+[submodule "xero"]
+	path = xero
+	url = git@github.com:xero/dotfiles.git
