add @arp242’s dotfiles
especially for
https://github.com/arp242/dotfiles/blob/dceb07e797f8045d45d83bedc32d2166e3822d42/zsh/zshrc#L11-L42
which is described here
https://github.com/arp242/arp242.net/blob/b046a1b573cbe170b27bb257029f8a9ecdc063e3/_posts/2020-05-22-zshrc.markdown#easier-path

--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "DriesVints"]
 	path = DriesVints
 	url = git@github.com:driesvints/dotfiles.git
+[submodule "arp242"]
+	path = arp242
+	url = git@github.com:arp242/dotfiles.git
