add DeepSource `analyzers` `shell` and `secrets`

--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -42,6 +42,14 @@ enabled = true
 name = "sql"
 enabled = true
 
+[[analyzers]]
+name = "shell"
+enabled = true
+
+[[analyzers]]
+name = "secrets"
+enabled = true
+
 [[transformers]]
 name = "gofmt"
 enabled = true
