add @mislav’s dotfiles
especially for
https://github.com/mislav/dotfiles/tree/88cccec99d991d991b3ecf9a95496ccb28d75bc9/bin#git-utilities

https://web.archive.org/web/20210610161306id_/github.com/mislav/dotfiles/tree/HEAD/bin#user-content-git-utilities
https://web.archive.org/web/20210610165855id_/codeload.github.com/mislav/dotfiles/zip/refs/heads/master

--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "arp242"]
 	path = arp242
 	url = git@github.com:arp242/dotfiles.git
+[submodule "mislav"]
+	path = mislav
+	url = git@github.com:mislav/dotfiles.git
