add @awdeorio’s dotfiles
especially for
https://github.com/awdeorio/dotfiles/commit/a7b8f209ea7dc55efaf59d8f23e55b0b32c002e6#diff-2ec805608ef9780e2e2776b2020832058e55334e6855c3b91ff9bb58fa3c3d70R1725

via
https://github.com/tarunsk/dotfiles/blob/5b31fd648bcfe4de54e27388a1e1e733fca80ab9/.always_forget.txt#L1957

--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "mislav"]
 	path = mislav
 	url = git@github.com:mislav/dotfiles.git
+[submodule "awdeorio"]
+	path = awdeorio
+	url = git@github.com:awdeorio/dotfiles.git
