set @HerrBischoff dotfiles URL to https://git.herrbischoff.com/dotpr0n
https://github.com/herrbischoff/dotpr0n/commit/7bbb45246650c8230fcda5bbcc4322bbbe0d893e
https://web.archive.org/web/20210911172138id_/github.com/herrbischoff/dotpr0n/commit/7bbb45246650c8230fcda5bbcc4322bbbe0d893e#files

--- a/.gitmodules
+++ b/.gitmodules
@@ -18,7 +18,7 @@
 	url = git@github.com:webpro/dotfiles.git
 [submodule "MarcelBischoff"]
 	path = herrbischoff
-	url = git@github.com:herrbischoff/dotpr0n.git
+	url = https://git.herrbischoff.com/dotpr0n
 [submodule "GeorgeGritsouk"]
 	path = gggritso
 	url = git@github.com:gggritso/dotfiles.git
