--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -34,9 +34,9 @@ jobs:
           --output changelog.md
       - name: Commit files
         run: |
-          git config --local user.email "actions@github.com" && \
-          git config --local user.name "GitHub" && \
-          git add --verbose --all && \
+          git config --local user.email "actions@github.com"
+          git config --local user.name "GitHub"
+          git add --verbose --all
           git commit --allow-empty --verbose \
             --message='[ci skip] Updating changelog'
       - name: Push changes
