--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -34,8 +34,8 @@ jobs:
           --output changelog.md
       - name: Commit files
         run: |
-          git config user.email "actions@github.com"
-          git config user.name "GitHub"
+          git config -- user.email "actions@github.com"
+          git config -- user.name "GitHub"
           git add --verbose --all
           git commit --allow-empty --verbose \
             --message='[ci skip] update changelog'
