--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -27,10 +27,10 @@ jobs:
         run: |
           command gem install github_changelog_generator
           command github_changelog_generator \
-            -u ${{ github.repository_owner }} \
-            -p "$(command git rev-parse --show-toplevel |
+            --user ${{ github.repository_owner }} \
+            --project "$(command git rev-parse --show-toplevel |
               command xargs basename)" \
-            -t ${{ secrets.GITHUB_TOKEN }} \
+            --token ${{ secrets.GITHUB_TOKEN }} \
             --exclude-labels duplicate,question,invalid,wontfix,nodoc \
             --output changelog.md
       - name: Commit files
