add @l0b0’s dotfiles (fix #330)
count files with a specific extension, even “hidden files, paths containing spaces, dashes and even newlines”:

    extension="${1:-txt}"
    command find -- . \
      -mindepth 1 \
      -name "*.${extension-}" \
      -exec printf x \; |
      command wc -c
    unset extension

https://en.wikipedia.org/w/?oldid=556414409#Importance_of_forking_in_Unix
https://gitlab.com/victor-engmark/tilde/commit/94413fd483
https://askubuntu.com/a/454568

--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "sircmpwn"]
 	path = sircmpwn
 	url = https://git.sr.ht/~sircmpwn/dotfiles
+[submodule "victor-engmark"]
+	path = victor-engmark
+	url = https://gitlab.com/victor-engmark/tilde.git
