--- a/.imgbotconfig
+++ b/.imgbotconfig
@@ -1,10 +1,10 @@
-{ // https://web.archive.org/web/20200523231457id_/imgbot.net/docs/#configuration
-  "schedule": "daily", // daily|weekly|monthly
+{
+  "schedule": "daily",
   "ignoredFiles": [
-    "*.svg", // ignore by extension
-    "wp-content/plugins/*", // ignore by path
+    "*.svg",
+    "wp-content/plugins/*"
   ],
-  "aggressiveCompression": "true", // true|false
-  "compressWiki": "true", // true|false
-  "minKBReduced": 1 // delay PRs size reduction ≥ threshold (default 10)
+  "aggressiveCompression": "true",
+  "compressWiki": "true",
+  "minKBReduced": 1
 }
