--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -6,6 +6,13 @@ on:
     branches:
       - main
 
+concurrency:
+  # cancel any in-progress job or run
+  # https://github.com/kdeldycke/workflows/commit/8bee3ba877
+  # https://docs.github.com/actions/using-jobs/using-concurrency
+  group: ${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
