send `printf` to `stdout` instead of `stderr`
Signed-off-by: Lucas Larson <LucasLarson@riseup.net>

--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -48,9 +48,9 @@ jobs:
                   command git config --get --worktree checkout.defaultRemote ||
                     command git config --get --local checkout.defaultRemote ||
                     command git config --get --system checkout.defaultRemote ||
-                    command git config --get --global checkout.defaultRemote ||
-                    printf "origin\n"
-                } 2>/dev/null
+                    command git config --get --global checkout.defaultRemote
+                } 2>/dev/null ||
+                  printf 'origin'
               )" |
                 command tr -d "[:space:]" |
                 command xargs basename |
