repair GitHub Super-Linter configuration
Signed-off-by: Lucas Larson <LucasLarson@riseup.net>

--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -1,29 +1,27 @@
 ---
-###########################
-###########################
-## Linter GitHub Actions ##
-###########################
-###########################
+#########################
+#########################
+## GitHub Super-Linter ##
+#########################
+#########################
 name: Super-Linter
-
-#
-# Documentation:
-# https://help.github.com/en/articles/workflow-syntax-for-github-actions
-#
+# https://bit.ly/git-io_workflow-syntax-for-github-actions
 
 #############################
 # Start the job on all push #
 #############################
 on:
-  # Trigger the workflow on push
-  # or pull request,
-  # but only for the main branch
   push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+
+#####################################
+# Cancel any in-progress job or run #
+#####################################
+concurrency:
+  # cancel any in-progress job or run
+  # https://github.com/kdeldycke/workflows/commit/8bee3ba877
+  # https://docs.github.com/actions/using-jobs/using-concurrency
+  group: ${{ github.ref }}
+  cancel-in-progress: true
 
 ###############
 # Set the Job #
@@ -44,6 +42,9 @@ jobs:
       ##########################
       - name: Checkout Code
         uses: actions/checkout@v3
+        with:
+          # Super-Linter requires full repository history for analysis
+          fetch-depth: 0
 
       ################################
       # Run Linter against code base #
@@ -53,4 +54,5 @@ jobs:
         env:
           VALIDATE_ALL_CODEBASE: false
           DEFAULT_BRANCH: main
+          # Super-Linter requires this variable even if it is unset
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
