enable beta @Dependabot ecosystems for `pub`
Signed-off-by: Lucas Larson <LucasLarson@riseup.net>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,6 +3,7 @@
 # package ecosystems to update and where the package manifests are located.
 
 version: 2
+enable-beta-ecosystems: true
 updates:
 
   # Bundler
@@ -137,6 +138,16 @@ updates:
 
   # pip
   - package-ecosystem: "pip"
+    directory: "/"
+    schedule:
+      interval: "daily"
+    ignore:
+      # ignore patch updates for all dependencies
+      - dependency-name: "*"
+        update-types: ["version-update:semver-minor"]
+
+  # pub
+  - package-ecosystem: "pub"
     directory: "/"
     schedule:
       interval: "daily"
