--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -1,30 +1,26 @@
 version = 1
 
 exclude_patterns = [
-  "**/.vscode/**",
-  "**/Application Support/**",
-  "**/archive/**",
-  "**/custom/plugins/**",
-  "**/custom/themes/**",
-  "**/node_modules/**"
+  "**/*copilot*",
+  "**/*vscode*",
+  "**/.git/*",
+  "**/Application Support/*",
+  "**/archive/*",
+  "**/custom/plugins/*",
+  "**/custom/themes/*",
+  "**/node_modules/*",
+  "**/package-lock.json",
+  "**/t/*",
+  "**/Test*",
+  "**/test*"
 ]
 
 [[analyzers]]
-name = "python"
+name = "ansible"
 enabled = true
 
-  [analyzers.meta]
-  runtime_version = "3.x.x"
-
 [[analyzers]]
-name = "go"
-enabled = true
-
-  [analyzers.meta]
-  import_root = 'github.com/LucasLarson/"$(git rev-parse --show-toplevel | xargs basename)"'
-
-[[analyzers]]
-name = "test-coverage"
+name = "csharp"
 enabled = true
 
 [[analyzers]]
@@ -32,11 +28,7 @@ name = "docker"
 enabled = true
 
 [[analyzers]]
-name = "ruby"
-enabled = true
-
-[[analyzers]]
-name = "terraform"
+name = "java"
 enabled = true
 
 [[analyzers]]
@@ -47,8 +39,43 @@ enabled = true
   style_guide = "standard"
   environment = ["browser"]
 
+[[transformers]]
+name = "standardjs"
+enabled = true
+
 [[analyzers]]
-name = "sql"
+name = "php"
+enabled = true
+
+[[transformers]]
+name = "php-cs-fixer"
+enabled = true
+
+[[analyzers]]
+name = "python"
+enabled = true
+
+  [analyzers.meta]
+  runtime_version = "3.x.x"
+
+[[transformers]]
+name = "black"
+enabled = true
+
+[[analyzers]]
+name = "ruby"
+enabled = true
+
+[[analyzers]]
+name = "rust"
+enabled = true
+
+[[analyzers]]
+name = "scala"
+enabled = true
+
+[[analyzers]]
+name = "secrets"
 enabled = true
 
 [[analyzers]]
@@ -56,45 +83,13 @@ name = "shell"
 enabled = true
 
 [[analyzers]]
-name = "secrets"
+name = "sql"
 enabled = true
 
-[[transformers]]
-name = "yapf"
+[[analyzers]]
+name = "terraform"
 enabled = true
 
-[[transformers]]
-name = "gofmt"
-enabled = true
-
-[[transformers]]
-name = "autopep8"
-enabled = true
-
-[[transformers]]
-name = "isort"
-enabled = true
-
-[[transformers]]
-name = "standardrb"
-enabled = true
-
-[[transformers]]
-name = "google-java-format"
-enabled = true
-
-[[transformers]]
-name = "prettier"
-enabled = false
-
-[[transformers]]
-name = "black"
-enabled = true
-
-[[transformers]]
-name = "standardjs"
-enabled = true
-
-[[transformers]]
-name = "rubocop"
+[[analyzers]]
+name = "test-coverage"
 enabled = true
