--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,15 @@
 ---
-# GitLab Code Quality CI
+stages:
+  - test
+
+sast:
+  stage: test
+
 include:
-  template: Jobs/Code-Quality.gitlab-ci.yml
+
+  # Code Quality
+  - template: Jobs/Code-Quality.gitlab-ci.yml
+
+  # Secret Detection
+  - template: Security/SAST.gitlab-ci.yml
+  - template: Security/Secret-Detection.gitlab-ci.yml
