use lowercase “pull request”
skip the pedantic capital letters in a proprietary proper noun
https://github.com/LucasLarson/.github/commit/1f0a4909d0

Signed-off-by: Lucas Larson <LucasLarson@riseup.net>

--- a/.github/workflows/jsonlint.yml
+++ b/.github/workflows/jsonlint.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   format-json:
-    name: Format JSON files and create a Pull Request
+    name: Format JSON files and create a pull request
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
