add additional offsite registry for submodule (#505, #506)
Signed-off-by: Lucas Larson <LucasLarson@riseup.net>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,6 +14,12 @@ registries:
     username: x-access-token
     password: ${{ secrets.TOKEN }}
 
+  sircmpwn:
+    type: git
+    url: https://git.sr.ht
+    username: x-access-token
+    password: ${{ secrets.TOKEN }}
+
 updates:
 
   # Bundler
