update URLs after `victor-engmark`→`engmark` rename
https://gitlab.com/engmark/tilde/compare/ae1ea41fe3...0516d40b39
`gitlab.com/victor-engmark` → `gitlab.com/vengmark` → `gitlab.com/engmark`

Signed-off-by: Lucas Larson <LucasLarson@riseup.net>

--- a/.gitmodules
+++ b/.gitmodules
@@ -54,4 +54,4 @@
 	url = https://git.sr.ht/~sircmpwn/dotfiles
 [submodule "victor-engmark"]
 	path = victor-engmark
-	url = https://gitlab.com/victor-engmark/tilde.git
+	url = https://gitlab.com/engmark/tilde.git
