follow submodule branch from `master` to `main`
Signed-off-by: Lucas Larson <LucasLarson@riseup.net>

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,7 +31,7 @@
   path = TimButters
   url = https://github.com/TimButters/dotfiles
 [submodule "GregHurrell"]
-  branch = master
+  branch = main
   path = wincent
   url = https://github.com/wincent/wincent
 [submodule "NicolaPaolucci"]
