--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -10,6 +10,8 @@ concurrency:
   group: ${{ github.ref }}
   cancel-in-progress: true
 
+permissions: read-all
+
 jobs:
   build:
     runs-on: ubuntu-22.04
