--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -23,6 +23,11 @@ concurrency:
   group: ${{ github.ref }}
   cancel-in-progress: true
 
+############################
+# Ensure safer permissions #
+############################
+permissions: read-all
+
 ###############
 # Set the Job #
 ###############
