fix: ensure safer workflow permissions (CKV2_GHA_1)
https://github.com/ferrarimarco/dotfiles/commit/c57d388d43
Signed-off-by: Lucas Larson <LucasLarson@riseup.net>

--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -13,6 +13,12 @@ name: Super-Linter
 on:
   push:
 
+############################
+# Ensure safer permissions #
+############################
+permissions:
+  contents: read
+
 #####################################
 # Cancel any in-progress job or run #
 #####################################
@@ -22,11 +28,6 @@ concurrency:
   # https://docs.github.com/actions/using-jobs/using-concurrency
   group: ${{ github.ref }}
   cancel-in-progress: true
-
-############################
-# Ensure safer permissions #
-############################
-permissions: read-all
 
 ###############
 # Set the Job #
