--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -6,11 +6,12 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read
+
 concurrency:
   group: ${{ github.ref }}
   cancel-in-progress: true
-
-permissions: read-all
 
 jobs:
   build:
