fix: update Victor Engmark repository address
Signed-off-by: Lucas Larson <LucasLarson@riseup.net>

--- a/.gitmodules
+++ b/.gitmodules
@@ -65,4 +65,4 @@
 [submodule "victor-engmark"]
   branch = master
   path = victor-engmark
-  url = https://gitlab.com/engmark/tilde.git
+  url = https://gitlab.com/engmark/root
